adjusting 10 restyled look and feel with regard to selected folder background color by changing css simply

--- a/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.css
+++ b/frontend/src/main/resources/org/onehippo/forge/folderctxmenus/cms/plugin/CopyOrMoveFolderDialog.css
@@ -29,3 +29,7 @@
   overflow: auto;
   width: 486px;
 }
+
+.folderctxmenus-dialog .hippo-tree .wicket-tree .row-selected {
+  background-color: #0086f8;
+}
